feat: Use builder, fix test
Signed-off-by: subhramit <subhramit.bb@live.in>